# Microservices-Antiplagiate-Project

./: .gitignore  README.md  docker-compose.yml
APIGateway/: nginx.conf
FileAnalisysService/: .env  Dockerfile  README.md  pyproject.toml
FileAnalisysService/app/: config.py  main.py
FileAnalisysService/app/domain/entities/: models.py
FileAnalisysService/app/domain/exceptions/: exceptions.py
FileAnalisysService/app/domain/repositories/: analysis_repository.py  storage_client.py
FileAnalisysService/app/domain/services/: file_storage_client.py  wordcloud_client.py
FileAnalisysService/app/use_cases/: analyze_file.py  get_results.py
FileAnalisysService/tests/: conftest.py  test_analyze_file_use_case.py  test_get_analysis_results_use_case.py  test_local_file_storage.py  test_postgres_file_analysis_repository.py  test_remote_file_storage_client.py
FileStoringService/: .env  Dockerfile  README.md  pyproject.toml  pytest.ini
FileStoringService/app/: config.py  main.py
FileStoringService/app/domain/: exceptions.py  models.py
FileStoringService/app/domain/ports/: file_repository.py  file_storage.py
FileStoringService/app/infrastructure/: local_storage.py  postgres_repository.py
FileStoringService/app/infrastructure/models/: file_entity.py
FileStoringService/app/interfaces/: dependencies.py  storage_router.py
FileStoringService/app/use_cases/: file_service.py
FileStoringService/tests/: conftest.py  test_file_service.py  test_local_storage.py  test_postgres_repository.py
postman/: New Collection.postman_collection.json
(+8 files in other folders)
